--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <body>
     <div class="container">
         <h1>I See You</h1><br>
-        <p style="font-size: 30px; text-align: center;">This site shows the personal infomations a website will see as soon as you click it's link.</p><br>
+        <p style="font-size: 30px; text-align: center;">This site shows the personal informations a website will see as soon as you click it's link.</p><br>
         <div class="dataCont">
             * IP Address -> <span Id="ip" style="background: #AD0000;">IP</span><br><br>
             * Internet Service Provider(ISP) -> <span Id="isp" style="background: #AD0000;">ISP</span><br><br>
@@ -91,7 +91,7 @@
     </div>
 
     <div Id="disclaim" style="text-align: left; left: 0.1%; bottom: 4%; position: fixed;">
-        Disclaimer : Non of the information shown above are stored, recorded or collected.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This site's use is intended for &nbsp;educational and infomational purposes only.
+        Disclaimer : None of the information shown above are stored, recorded or collected.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This site's use is intended for &nbsp;educational and informational purposes only.
     </div>
 
     <footer>
@@ -120,7 +120,7 @@
          document.getElementById('postalCode').innerHTML = "&nbsp;"+response.postal+"&nbsp;";
      }, "json").catch(function(e){
         console.log(e);
-        document.getElementsByClassName('dataCont')[0].innerHTML = "<p style='text-align: center;''>Good, you are using a good Ad Blocker<br>Turn off the Ad Blocker to see personal infomations<p>";
+        document.getElementsByClassName('dataCont')[0].innerHTML = "<p style='text-align: center;''>Good, you are using a good Ad Blocker<br>Turn off the Ad Blocker to see personal informations<p>";
     });
 </script>
 
